# CoreAudioExtAudioFileExample

./: CMakeLists.txt  decode.cpp  decode_with_callbacks.cpp  detect_audio_format.cpp  encode.cpp  encode_planar_data.cpp  encode_with_callbacks.cpp  file_output_stream.cpp  file_output_stream.h  scope_guard.h  tool_function.h
